--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vue/devtools-kit": "^8.0.3",
     "vue": "^3.5.18"
   },
   "devDependencies": {
