--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,43 @@
-prettytable==3.11.0
-numpy==2.3.2
-torch==2.8.0
+blinker==1.9.0
+click==8.3.0
+filelock==3.20.0
+Flask==3.1.2
 flask-cors==6.0.1
+fsspec==2025.9.0
+iniconfig==2.3.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.3
+mpmath==1.3.0
+networkx==3.5
+numpy==2.3.2
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.3
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvtx-cu12==12.8.90
+packaging==25.0
+pandas==2.3.3
+pluggy==1.6.0
+prettytable==3.11.0
+Pygments==2.19.2
+python-dateutil==2.9.0.post0
+pytz==2025.2
+setuptools==80.9.0
+six==1.17.0
+sympy==1.14.0
+torch==2.8.0
+triton==3.4.0
+typing_extensions==4.15.0
+tzdata==2025.2
+wcwidth==0.2.14
+Werkzeug==3.1.3
